--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,8 @@ CORS_ORIGIN=*
 MS_NAME=
 MS_PATH=
 
-# Interval to check BT Coin (in seconds)
-INTERVAL_TO_CHECK=300
+# Interval to check BT Coin (in seconds: 1-59)
+INTERVAL_TO_CHECK=59
 
 # To send mail
 SMTP_HOST=
