Alert Top and Dow Variation

--- a/.env.example
+++ b/.env.example
@@ -21,5 +21,6 @@ SMTP_NAME=
 MAIL_TO=
 
 # Limit to alert in %. Ex 15 equal 15%
-BTC_ALERT_DOWN=15
-
+BTC_LIMIT_VAR_TOP=2
+BTC_LIMIT_VAR_DOWN=1
+BTC_BASE_IN_BRL=148941
