Add SQLITE; topLimit movel; postPreference route

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ CORS_ORIGIN=*
 MS_NAME=
 MS_PATH=
 
-# Interval to check BT Coin (in seconds: 1-59)
+# Interval to check BT Coin (in minutes: 1-59)
 INTERVAL_TO_CHECK=59
 
 # To send mail
