--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "express": "^4.17.1",
     "helmet": "^4.2.0",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.4.17"
+    "nodemailer": "^6.4.17",
+    "sqlite": "^4.0.19",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -36,6 +38,7 @@
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.10",
     "@types/nodemailer": "^6.4.0",
+    "@types/sqlite3": "^3.1.6",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.2"
