postPreference route protected by key; insomnia updated

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,6 @@ MAIL_TO=
 BTC_LIMIT_VAR_TOP=2
 BTC_LIMIT_VAR_DOWN=1
 BTC_BASE_IN_BRL=148941
+
+# API key to peferences update
+KEY_UPDATE_PREFERENCES=sshwegvwgwegc
