--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "test": "test"
   },
   "scripts": {
-    "start": "tsc && ts-node -r dotenv/config -r tsconfig-paths/register ./dist/server.js",
+    "copy-assets": "ts-node src/tools/copyAssets",
+    "start": "yarn copy-assets && tsc && ts-node -r dotenv/config -r tsconfig-paths/register ./dist/server.js",
     "compile": "tsc && ts-node -r dotenv/config -r tsconfig-paths/register ./dist/server.js",
-    "dev": "nodemon -e ts,json --ignore dist --exec \"npm run compile\"",
+    "dev": "nodemon -e ts,json,ejs --ignore dist --exec \"npm run compile\"",
     "test": "jest"
   },
   "keywords": [],
@@ -22,10 +23,12 @@
     "cors": "^2.8.5",
     "cron": "^1.8.2",
     "dotenv-safe": "^8.2.0",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
     "helmet": "^4.2.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.17",
+    "shelljs": "^0.8.4",
     "sqlite": "^4.0.19",
     "sqlite3": "^5.0.0"
   },
@@ -38,6 +41,7 @@
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.10",
     "@types/nodemailer": "^6.4.0",
+    "@types/shelljs": "^0.8.8",
     "@types/sqlite3": "^3.1.6",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
