alerto mail down

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,9 @@ SMTP_NAME=
 # Mail recipients
 MAIL_TO=
 
+# Database file (sqlite)
+DB_FILE=
+
 # Limit to alert in %. Ex 15 equal 15%
 BTC_LIMIT_VAR_TOP=2
 BTC_LIMIT_VAR_DOWN=1
